Create Animal Model Card to represent the animal models from Alliance Genome (#86)
* Creating the files to house alliance genome card data

* The card is taking shape, lots of changes

* Playing with making color and icons for the model card list

* Updated the animal model fixtures to be correct, still working on the card design as new data comes in

* Adding scrolling to the cards

* Changed the model annotations to get a limit of 100 models, rather than 20 models. Updated the fixtures to contain ALL models

* experimental conditions is working

* Started on the AllianceGenomeCard tests and linting

* Finished testing the frontend components, linting, and system test fixes

* Updated the comments to TODO

* Removed display: block, position: relative from card-base. Changed li margin-left to use variable. Removed the overflow-y from card-source

* Consolidated duplicate conditional code to determine if a section is empty and change the text color in AlliangeGenomeCard

* trailing comma linting

* Updated the AllianceGenomeCard.spec.js toContain to be to.include

--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -125,14 +125,14 @@
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://www.alliancegenome.org/api/search_autocomplete?q={gene}",
-    "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Rno)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Mouse Gene Identifier\": .primaryKey }"
+    "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Rno)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Rat Gene Identifier\": .primaryKey }"
   },
   {
     "data_set": "Rat Models",
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{Rat Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{Rat Gene Identifier}/models?limit=100",
     "attribute": "{ \"Rat Models\": [.results[]] }",
     "dependencies": ["Rat Gene Identifier"]
   },
@@ -158,7 +158,7 @@
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{Mouse Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{Mouse Gene Identifier}/models?limit=100",
     "attribute": "{ \"Mouse Models\": [.results[]] }",
     "dependencies": ["Mouse Gene Identifier"]
   },
@@ -168,7 +168,7 @@
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://www.alliancegenome.org/api/search_autocomplete?q={gene}",
-    "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Dre)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Mouse Gene Identifier\": .primaryKey }"
+    "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Dre)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Zebrafish Gene Identifier\": .primaryKey }"
   },
   {
     "data_set": "Model Systems - Zebrafish - Automated",
@@ -184,7 +184,7 @@
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{Zebrafish Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{Zebrafish Gene Identifier}/models?limit=100",
     "attribute": "{ \"Zebrafish Models\": [.results[]] }",
     "dependencies": ["Zebrafish Gene Identifier"]
   },
@@ -194,7 +194,7 @@
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://www.alliancegenome.org/api/search_autocomplete?q={gene}",
-    "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Cel)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Mouse Gene Identifier\": .primaryKey }"
+    "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Cel)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"C-Elegens Gene Identifier\": .primaryKey }"
   },
   {
     "data_set": "Model Systems - C-Elegens - Automated",
@@ -210,7 +210,7 @@
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{C-Elegens Gene Identifier}/models",
+    "url": "https://www.alliancegenome.org/api/gene/{C-Elegens Gene Identifier}/models?limit=100",
     "attribute": "{ \"C-Elegens Models\": [.results[]] }",
     "dependencies": ["C-Elegens Gene Identifier"]
   },
