--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -111,21 +111,30 @@
     "attribute": "{ \"HPO_gene_search_url\": .HPO_gene_search_url }"
   },
   {
-    "data_set": "Model Systems - Rat",
-    "data_source": "Aliance Genome",
-    "genomic_unit_type": "gene",
-    "annotation_source_type": "http",
-    "url": "https://www.alliancegenome.org/api/gene/{Rat Gene Identifier}",
-    "attribute": "{ \"Model Systems - Rat\": .geneSynopsis}",
-    "dependencies": ["Rat Gene Identifier"]
-  },
-  {
     "data_set": "Rat Gene Identifier",
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://www.alliancegenome.org/api/search_autocomplete?q={gene}",
     "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Rno)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Rat Gene Identifier\": .primaryKey }"
+  },
+  {
+    "data_set": "Rat_Alliance_Genome_Automated_Summary",
+    "data_source": "Alliance Genome",
+    "genomic_unit_type": "gene",
+    "annotation_source_type": "http",
+    "url": "https://www.alliancegenome.org/api/gene/{Rat Gene Identifier}",
+    "attribute": "{ \"Rat_Alliance_Genome_Automated_Summary\": .automatedGeneSynopsis }",
+    "dependencies": ["Rat Gene Identifier"]
+  },
+  {
+    "data_set": "Rat_Alliance_Genome_RGD_Summary",
+    "data_source": "Alliance Genome",
+    "genomic_unit_type": "gene",
+    "annotation_source_type": "http",
+    "url": "https://www.alliancegenome.org/api/gene/{Rat Gene Identifier}",
+    "attribute": "{ \"Rat_Alliance_Genome_RGD_Summary\": .geneSynopsis}",
+    "dependencies": ["Rat Gene Identifier"]
   },
   {
     "data_set": "Rat_Alliance_Genome_Models",
@@ -145,12 +154,21 @@
     "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Mmu)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Mouse Gene Identifier\": .primaryKey }"
   },
   {
-    "data_set": "Model Systems - Mouse - Automated",
+    "data_set": "Mouse_Alliance_Genome_Automated_Summary",
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://www.alliancegenome.org/api/gene/{Mouse Gene Identifier}",
-    "attribute": "{ \"Model Systems - Mouse\": .automatedGeneSynopsis}",
+    "attribute": "{ \"Mouse_Alliance_Genome_Automated_Summary\": .automatedGeneSynopsis }",
+    "dependencies": ["Mouse Gene Identifier"]
+  },
+  {
+    "data_set": "Mouse_Alliance_Genome_MGI_Summary",
+    "data_source": "Alliance Genome",
+    "genomic_unit_type": "gene",
+    "annotation_source_type": "http",
+    "url": "https://www.alliancegenome.org/api/gene/{Mouse Gene Identifier}",
+    "attribute": "{ \"Mouse_Alliance_Genome_MGI_Summary\": .geneSynopsis }",
     "dependencies": ["Mouse Gene Identifier"]
   },
   {
@@ -171,12 +189,21 @@
     "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Dre)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"Zebrafish Gene Identifier\": .primaryKey }"
   },
   {
-    "data_set": "Model Systems - Zebrafish - Automated",
+    "data_set": "Zebrafish_Alliance_Genome_Automated_Summary",
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://www.alliancegenome.org/api/gene/{Zebrafish Gene Identifier}",
-    "attribute": "{ \"Model Systems - Zebrafish\": .automatedGeneSynopsis}",
+    "attribute": "{ \"Zebrafish_Alliance_Genome_Automated_Summary\": .automatedGeneSynopsis }",
+    "dependencies": ["Zebrafish Gene Identifier"]
+  },
+  {
+    "data_set": "Zebrafish_Alliance_Genome_ZFIN_Summary",
+    "data_source": "Alliance Genome",
+    "genomic_unit_type": "gene",
+    "annotation_source_type": "http",
+    "url": "https://www.alliancegenome.org/api/gene/{Zebrafish Gene Identifier}",
+    "attribute": "{ \"Zebrafish_Alliance_Genome_ZFIN_Summary\": .geneSynopsis }",
     "dependencies": ["Zebrafish Gene Identifier"]
   },
   {
@@ -197,12 +224,21 @@
     "attribute": ".results[] | { \"name_key\": .name_key, \"name\": .name, \"primaryKey\": .primaryKey, \"searchKey\": \"{gene} (Cel)\" } | . + { \"searchKey\": .searchKey | ascii_downcase, \"name_key\": .name_key | ascii_downcase } |  select( .name_key == .searchKey) | { \"C-Elegens Gene Identifier\": .primaryKey }"
   },
   {
-    "data_set": "Model Systems - C-Elegens - Automated",
+    "data_set": "C-Elegens_Alliance_Genome_Automated_Summary",
     "data_source": "Alliance Genome",
     "genomic_unit_type": "gene",
     "annotation_source_type": "http",
     "url": "https://www.alliancegenome.org/api/gene/{C-Elegens Gene Identifier}",
-    "attribute": "{ \"Model Systems - C-Elegens\": .automatedGeneSynopsis}",
+    "attribute": "{ \"C-Elegens_Alliance_Genome_Automated_Summary\": .automatedGeneSynopsis }",
+    "dependencies": ["C-Elegens Gene Identifier"]
+  },
+  {
+    "data_set": "C-Elegens_Alliance_Genome_WB_Summary",
+    "data_source": "Alliance Genome",
+    "genomic_unit_type": "gene",
+    "annotation_source_type": "http",
+    "url": "https://www.alliancegenome.org/api/gene/{C-Elegens Gene Identifier}",
+    "attribute": "{ \"C-Elegens_Alliance_Genome_WB_Summary\": .geneSynopsis }",
     "dependencies": ["C-Elegens Gene Identifier"]
   },
   {
