Tagging the version of ubuntu being used for ubuntu-latest for consistentcy. ubuntu-22.04 is the current long term support (LTS) version.

--- a/.github/workflows/draft-paper.yml
+++ b/.github/workflows/draft-paper.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   paper:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: JOSS pandoc paper draft
     steps:
       - name: Checkout
