PR-CI/CD experiment status (#98)
* Matching quac system test

* Re-enable synchronize

* Experimenting with a conditional to prevent running jobs multiple times
on push and pull requests yet still run for PR's for forks.

* Experimenting with the double trigger. (#97)

* Experimenting with the double trigger.

* Tagging the version of ubuntu being used for ubuntu-latest for consistentcy.
ubuntu-22.04 is the current long term support (LTS) version.

* Update common-static-analysis.yml

Signed-off-by: Angelina Uno-Antonison <ange.unoantonison@gmail.com>

* Apply suggestions from code review

Co-authored-by: James Scherer <jscherer@uab.edu>
Signed-off-by: Angelina Uno-Antonison <angelina.antonison@gmail.com>

* Update README.md

Removed line causing the linting to break.

Signed-off-by: Angelina Uno-Antonison <angelina.antonison@gmail.com>

---------

Signed-off-by: Angelina Uno-Antonison <ange.unoantonison@gmail.com>
Signed-off-by: Angelina Uno-Antonison <angelina.antonison@gmail.com>
Co-authored-by: James Scherer <jscherer@uab.edu>

---------

Signed-off-by: Angelina Uno-Antonison <ange.unoantonison@gmail.com>
Signed-off-by: Angelina Uno-Antonison <angelina.antonison@gmail.com>
Co-authored-by: James Scherer <jscherer@uab.edu>

--- a/.github/workflows/common-static-analysis.yml
+++ b/.github/workflows/common-static-analysis.yml
@@ -1,5 +1,4 @@
 name: Markdown, Docker, and Shell Static Analysis
-
 on: [push, pull_request, workflow_dispatch]
 
 env:
@@ -10,7 +9,8 @@ env:
 
 jobs:
   docker-shell-markdown-static-analysis:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
       
     steps:
     - uses: actions/checkout@v3
