--- a/backend/src/logging.conf
+++ b/backend/src/logging.conf
@@ -1,27 +1,21 @@
 [loggers]
-keys=root,simpleExample
+keys=root
 
 [handlers]
 keys=consoleHandler
 
 [formatters]
-keys=simpleFormatter
+keys=normalFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler
-
-[logger_simpleExample]
-level=DEBUG
-handlers=consoleHandler
-qualname=simpleExample
-propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
-formatter=simpleFormatter
+formatter=normalFormatter
 args=(sys.stdout,)
 
-[formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+[formatter_normalFormatter]
+format=%(asctime)s loglevel=%(levelname)-6s logger=%(name)s %(funcName)s() L%(lineno)-4d %(message)s
