Updated the diectory for logging.conf and changed the formatting for annotation to be more readable

--- a/backend/logging.conf
+++ b/backend/logging.conf
@@ -18,4 +18,6 @@ formatter=normalFormatter
 args=(sys.stdout,)
 
 [formatter_normalFormatter]
-format=%(asctime)s loglevel=%(levelname)-6s logger=%(name)s %(funcName)s() L%(lineno)-4d %(message)s
+# Make note
+# format=%(asctime)s loglevel=%(levelname)-6s logger=%(name)s %(funcName)s() Line%(lineno)-4d %(message)s
+format=%(levelname)-9s %(message)s
