Adding in some preliminary comments

--- a/backend/logging.conf
+++ b/backend/logging.conf
@@ -18,6 +18,7 @@ formatter=normalFormatter
 args=(sys.stdout,)
 
 [formatter_normalFormatter]
-# Make note
-# format=%(asctime)s loglevel=%(levelname)-6s logger=%(name)s %(funcName)s() Line%(lineno)-4d %(message)s
+# Change the formatting here if you would like more detailed debugging information.
 format=%(levelname)-9s %(message)s
+# This includes the name of the function that was called and the line it occurred.
+# format=%(levelname)-9s logger=%(name)s %(funcName)s() Line%(lineno)-4d %(message)s
