--- a/docker-compose.local-production.yml
+++ b/docker-compose.local-production.yml
@@ -25,6 +25,9 @@ services:
       context: ./frontend/
       target: production-stage
       dockerfile: Dockerfile
+      args:
+        VERSION_BUILD_TAG: "local-production@latest"
+    # image: ghcr.io/uab-cgds-worthey/rosalution/frontend:${ROSALUTION_VERSION}
     networks:
       - rosalution-network
     labels:
@@ -43,6 +46,7 @@ services:
       context: ./backend/
       target: production-stage
       dockerfile: Dockerfile
+    # image: ghcr.io/uab-cgds-worthey/rosalution/backend:${ROSALUTION_VERSION}
     networks:
       - rosalution-network
     environment:
@@ -60,10 +64,11 @@ services:
       - "traefik.http.services.backend-api-service.loadbalancer.server.port=8000"
 
   rosalution-db:
-    build:
-      context: ./etc/fixtures/
-      target: production-stage
-      dockerfile: production.Dockerfile
+    # build:
+    #   context: ./etc/fixtures/
+    #   target: production-stage
+    #   dockerfile: production.Dockerfile
+    image: ghcr.io/uab-cgds-worthey/rosalution/database-fixture:${ROSALUTION_VERSION}
     networks:
       - rosalution-network
     environment:
