--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./frontend/src:/app/src
+    environment:
+      VITE_ROSALUTION_VERSION: "local@latest"
     networks:
       - rosalution-network
     labels:
@@ -38,10 +40,11 @@ services:
       - "traefik.http.services.frontend-web-service.loadbalancer.server.port=80"
   
   backend:
-    build:
-      context: ./backend/
-      target: development-stage
-      dockerfile: Dockerfile
+    image: ghcr.io/uab-cgds-worthey/rosalution/frontend:${ROSALUTION_VERSION}
+    # build:
+    #   context: ./backend/
+    #   target: development-stage
+    #   dockerfile: Dockerfile
     volumes:
       - ./backend:/app
     environment:
